# C3Engine

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: bitboard.cpp  bitboard.h  board.cpp  book.cpp  book.h  eval.cpp  history.cpp  history.h  movegen.cpp  movegen.h  search.cpp  search.h  searchthread.h  stdendian.h  syzygy.cpp  syzygy.h  tbconfig.h  tt.cpp  tt.h  uci.cpp
